# Magang-IRIS

./: README.md  a.out  magang.cpp  pengingat.txt  upload.sh  upload_all.sh
13 April 2021/: README.md  a.out  main.cpp
15 April 2021/: Penugasan 1.cpp  Penugasan 2.cpp  Penugasan 3.cpp  Penugasan 4.cpp  Penugasan 5.cpp  Penugasan 6.cpp  Penugasan 7.cpp  a.out
FP/devel/: .catkin  .rosinstall
FP/devel/include/bismillah_fp/: koordinat_bola.h  target.h
FP/devel/lib/bismillah_fp/: kamera  motor  pc
FP/devel/lib/pkgconfig/: bismillah_fp.pc
FP/devel/share/bismillah_fp/cmake/: bismillah_fp-msg-extras.cmake  bismillah_fp-msg-paths.cmake  bismillah_fpConfig.cmake
FP/src/bismillah_fp/: CMakeLists.txt
FP/src/bismillah_fp/launch/: launcher.launch
FP/src/bismillah_fp/msg/: target.msg
FP/src/bismillah_fp/src/: kamera.cpp  motor.cpp  pc.cpp
openCV/c+=1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main_prog  run.sh  temp_code.txt
ros/devel/: .catkin  local_setup.sh
ros/devel/include/dasar_ros/: dua_dan_tiga.h  pesan_saya.h
ros/devel/lib/dasar_ros/: KangHitung  Node1  Node2  Node3  listener  talker
ros/devel/lib/pkgconfig/: dasar_ros.pc
ros/devel/share/dasar_ros/cmake/: dasar_ros-msg-extras.cmake  dasar_ros-msg-paths.cmake  dasar_rosConfig.cmake
ros/src/: tugas2.rar
ros/src/dasar_ros/: CMakeLists.txt  package.xml
ros/src/dasar_ros/launch/: belajar_ross.launch
ros/src/dasar_ros/msg/: dua_dan_tiga.msg  pesan_saya.msg
ros/src/dasar_ros/src/: kamera.cpp  listener.cpp  listener2.cpp  talkre.cpp
(+33 files in other folders)
